terraform/modules/vpc/internet_gateway.tf
##################################################
# Internet Gateway
##################################################

resource "aws_internet_gateway" "this" {

  vpc_id = aws_vpc.this.id

  tags = merge(
    local.common_tags,
    {
      Name = "${local.name_prefix}-igw"
    }
  )

}
